# PromPiloT

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml  sdk-tests.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: datasets.py  prompts.py  scores.py
backend/app/core/: llm_client.py
backend/app/models/: schemas.py
backend/app/services/: eval_runner.py  llm_judge.py
backend/app/storage/: table_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_evaluations.py  test_api_flows.py  test_api_projects.py
backend/tests/unit/: test_eval_runner.py  test_flow_executor.py  test_llm_judge.py
docs/: README.md  SDK.md
docs/sdk/: create-a-flow.md  create-prompt-and-fetch-production.md  run-a-flow.md  run-evaluation-between-two-prompts.md  use-a-flow-in-code.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: flows.ts  projects.ts  prompts.ts  traces.ts
frontend/src/hooks/: useEvaluation.ts  useModels.ts  useProjects.ts  usePrompts.ts
frontend/src/pages/: DatasetDetailPage.tsx  FlowsPage.tsx  ProjectsPage.tsx  PromptsPage.tsx
frontend/src/types/: api.ts
promptflow/: .env.example  PROGRESS.md
promptflow/backend/: pyproject.toml
promptflow/backend/app/: config.py
promptflow/frontend/: package.json
promptflow/sdk/: pyproject.toml
promptflow/sdk/src/prom_pilot/: client.py
promptflow/sdk/src/prom_pilot/resources/: datasets.py  evaluations.py  flows.py  traces.py
promptflow/sdk/tests/: test_sdk.py
sdk/tests/: test_sdk.py
(+45 files in other folders)
