[project]
name = "prom-pilot-backend"
version = "0.1.0"
description = "Prom-Pilot LLMOps Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "azure-data-tables>=12.5.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langsmith>=0.0.80",
    "litellm>=1.20.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "ragas>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
