[project]
name = "prom-pilot-sdk"
version = "0.1.0"
description = "Python SDK for Prom-Pilot — call flows, manage datasets, and trigger evaluations from code"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prom_pilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
